--- a/WebStoreAPI/appsettings.json
+++ b/WebStoreAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SHIMCHUKEVICHA\\WEBSTORESERVER;Database=webstoredb;User Id=a.shimchukevich;Password=KPhD8D3r;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
