Implement authification and autorization

--- a/WebStoreAPI/appsettings.json
+++ b/WebStoreAPI/appsettings.json
@@ -3,6 +3,12 @@
     "DefaultConnection": "Server=SHIMCHUKEVICHA\\WEBSTORESERVER;Database=webstoredb;User Id=a.shimchukevich;Password=KPhD8D3r;Trusted_Connection=True;"
   },
 
+  "Jwt": {
+    "Key": "l0hF4UnhFtOSOpaCw8h1UsmM",
+    "Audience": "Test",
+    "Issuer": "Test"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
