--- a/WebStoreAPI/appsettings.json
+++ b/WebStoreAPI/appsettings.json
@@ -5,8 +5,8 @@
 
   "Jwt": {
     "Key": "l0hF4UnhFtOSOpaCw8h1UsmM",
-    "Audience": "Test",
-    "Issuer": "Test"
+    "Audience": "http://localhost:64671/",
+    "Issuer": "WebStoreAPI"
   },
 
   "Logging": {
