Add responce comments

--- a/WebStoreAPI/appsettings.json
+++ b/WebStoreAPI/appsettings.json
@@ -1,27 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SHIMCHUKEVICHA\\WEBSTORESERVER;Database=webstoredb;User Id=a.shimchukevich;Password=KPhD8D3r;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-12HPA98;Database=webstoredb;User Id=a.shimchukevich;Password=KPhD8D3r;Trusted_Connection=True;"
   },
 
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "Serilog": {
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "RollingFile",
-        "Args": {
-          "pathFormat": "D:\\Log\\log-{Date}.txt",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
-        }
-      }
-    ],
-    "Properties": {
-      "Application": "Common feature in WebApi demo"
     }
   }
 }
