--- a/WebStoreAPI/appsettings.json
+++ b/WebStoreAPI/appsettings.json
@@ -15,7 +15,7 @@
       {
         "Name": "RollingFile",
         "Args": {
-          "pathFormat": "bin\\Log\\log-{Date}.txt",
+          "pathFormat": "Log\\log-{Date}.log",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
         }
       }
