--- a/WebStoreAPI/appsettings.json
+++ b/WebStoreAPI/appsettings.json
@@ -1,11 +1,27 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-12HPA98;Database=webstoredb;User Id=a.shimchukevich;Password=KPhD8D3r;Trusted_Connection=True;"
+    "DefaultConnection": "Server=SHIMCHUKEVICHA\\WEBSTORESERVER;Database=webstoredb;User Id=a.shimchukevich;Password=KPhD8D3r;Trusted_Connection=True;"
   },
 
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "RollingFile",
+        "Args": {
+          "pathFormat": "Log\\log-{Date}.log",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "Common feature in WebApi demo"
     }
   }
 }
