--- a/WebStoreAPI/appsettings.json
+++ b/WebStoreAPI/appsettings.json
@@ -6,7 +6,8 @@
   "Jwt": {
     "Key": "l0hF4UnhFtOSOpaCw8h1UsmM",
     "Audience": "http://localhost:64671/",
-    "Issuer": "WebStoreAPI"
+    "Issuer": "WebStoreAPI",
+    "ExpireMinutes": 1
   },
 
   "Logging": {
