Added pagination to request

--- a/WebStoreAPI/appsettings.json
+++ b/WebStoreAPI/appsettings.json
@@ -10,6 +10,11 @@
     "ExpireMinutes": 1
   },
 
+  "Pagination": {
+    "Skip": "0",
+    "Take": "10"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
